--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ permalink: /:title/
 # Authors
 authors:
   baskar:
-    name: baskaran Thulukanam
+    name: Baskaran Thulukanam
     display_name: Baskar
     gravatar: 
     email: baskar.mailbox@gmail.com
