--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ logo:
 favicon: 
 baseurl: 
 google_analytics:
-disqus: @baskaranthulukanam
+disqus: '@baskaranthulukanam'
 mailchimp-list: 'https://gmail.us6.list-manage.com/subscribe?u=a297cf3e4b54c5d45370e381f&id=6a46f295fe'
 include: ["_pages"]
 permalink: /:title/
