--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ authors:
   baskar:
     name: Baskaran Thulukanam
     display_name: Baskar
-    gravatar: 
+    avatar: 'assets/images/avatar.png'
     email: baskar.mailbox@gmail.com
     web: 
     twitter:
