--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: "Machine Learning and Deep Learning Engineer"
 description: "ML and DL blogs"
 logo: 'assets/images/favicon.png'
 google_analytics:
-disqus: 'baskaranthulukanam'
+disqus: 'baskar-t-github-io'
 mailchimp-list: 'https://gmail.us6.list-manage.com/subscribe?u=a297cf3e4b54c5d45370e381f&id=6a46f295fe'
 include: ["_pages"]
 permalink: /:title/
