--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 # Site
 name: "Baskaran Thulukanam" 
-title: "Machine Learning and Deep Learning Engineer"
+title: "Baskaran Thulukanam"
 description: "ML and DL blogs"
-logo: 'assets/images/favicon.png'
 google_analytics:
 disqus: 'baskar-t-github-io'
 mailchimp-list: 'https://gmail.us6.list-manage.com/subscribe?u=a297cf3e4b54c5d45370e381f&id=6a46f295fe'
