--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@
 name: "Baskaran Thulukanam" 
 title: "Baskaran Thulukanam"
 description: "ML and DL blogs"
+email: baskar.mailbox@gmail.com
+linkedin: www.linkedin.com/in/baskaran-thulukanam-3472179
 google_analytics:
 disqus: 'baskar-t-github-io'
 mailchimp-list: 'https://gmail.us6.list-manage.com/subscribe?u=a297cf3e4b54c5d45370e381f&id=6a46f295fe'
