--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ github: https://github.com/baskar-t
 favicon: 'assets/images/favicon.png'
 google_analytics:
 disqus: 'baskar-t-github-io'
-mailchimp-list: https://gmail.us6.list-manage.com/subscribe?u=a297cf3e4b54c5d45370e381f&id=6a46f295fe
+mailchimp-list: 'https://gmail.us6.list-manage.com/subscribe?u=a297cf3e4b54c5d45370e381f&id=6a46f295fe'
 include: ["_pages"]
 permalink: /:title/
 
