--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ authors:
   baskar:
     name: Baskaran Thulukanam
     display_name: Baskar
+    gravatar: e56154546cf4be74e393c62d1ae9f9d4
     email: baskar.mailbox@gmail.com
     description: "Machine learning and Deep learning blogs"
   
