--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
-name: "BT" 
-title: "BT"
+name: "Baskaran Thulukanam" 
+title: "Baskaran Thulukanam"
 description: "ML and DL blogs"
 email: baskar.mailbox@gmail.com
 linkedin: https://www.linkedin.com/in/baskaran-thulukanam-3472179/
