--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "ML and DL blogs"
 email: baskar.mailbox@gmail.com
 linkedin: https://www.linkedin.com/in/baskaran-thulukanam-3472179/
 github: https://github.com/baskar-t
-logo: 'assets/images/logo.png'
+logo: 'assets/images/logo.ico'
 favicon: 'assets/images/favicon.png'
 google_analytics:
 disqus: 'baskar-t-github-io'
