--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 name: "Baskaran Thulukanam" 
 title: "Baskaran Thulukanam"
-description: "ML and DL blogs"
+description: "Machine Learning and Deep Learning blogs"
 email: baskar.mailbox@gmail.com
 linkedin: https://www.linkedin.com/in/baskaran-thulukanam-3472179/
 github: https://github.com/baskar-t
