--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,8 @@ authors:
     avatar: 'assets/images/avatar.png'
     gravatar: b1cc14991db7a456fcd761680bbc8f81
     email: baskar.mailbox@gmail.com
+    linkedin: https://www.linkedin.com/in/baskaran-thulukanam-3472179/
+    github: https://github.com/baskar-t
     description: "Machine learning and Deep learning blogs"
   
 
