--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ authors:
     email: baskar.mailbox@gmail.com
     linkedin: https://www.linkedin.com/in/baskaran-thulukanam-3472179/
     github: https://github.com/baskar-t
+    twitter: https://twitter.com/baskarant
     description: "Machine learning and Deep learning blogs"
   
 
