--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ description: "Machine Learning and Deep Learning blogs"
 email: baskar.mailbox@gmail.com
 linkedin: https://www.linkedin.com/in/baskaran-thulukanam-3472179/
 github: https://github.com/baskar-t
+twitter: https://twitter.com/baskarant
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.png'
 google_analytics: 'G-BY8JX1R1Y1'
