--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.png'
 google_analytics: 'G-BY8JX1R1Y1'
 disqus: 'baskar-t-github-io'
-Medium: @baskar.mailbox
+Medium: '@baskar.mailbox'
 mailchimp-list: 'https://gmail.us6.list-manage.com/subscribe?u=a297cf3e4b54c5d45370e381f&id=6a46f295fe'
 include: ["_pages"]
 permalink: /:title/
